syntax = "proto3";

import "google/protobuf/wrappers.proto";

package DueyDto;

import "Dto/Item.proto";
import "Duey/DueyPackage.proto";
import "Item/ItemTransaction.proto";

message CreatePackageRequest {
	int32 senderId = 1;
	int32 sendMeso = 2;
	google.protobuf.StringValue sendMessage = 3;
	string receiverName = 4;
	bool quick = 5;
	Dto.ItemDto item = 6;
	ItemDto.ItemTransaction transaction = 7;
}

message CreatePackageResponse {
	int32 code = 1;
	DueyPackageDto package = 2;
	string senderName = 3;
	ItemDto.ItemTransaction transaction = 4;
}