syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package DueyService;

import "Duey/CreatePackageRequest.proto";
import "Duey/RemovePackageRequest.proto";
import "Duey/TakeDueyPackage.proto";
import "Duey/DueyPackage.proto";

service ChannelService {
	rpc CreateDueyPackage (DueyDto.CreatePackageRequest) returns(DueyDto.CreatePackageResponse);
	rpc GetPlayerDueyPackage(DueyDto.GetPlayerDueyPackageRequest) returns(DueyDto.GetPlayerDueyPackageResponse);
	rpc RemoveDueyPackage(DueyDto.RemovePackageRequest) returns(DueyDto.RemovePackageResponse);
	rpc TakeDueyPackage(DueyDto.TakeDueyPackageRequest) returns(DueyDto.TakeDueyPackageResponse);
	rpc TakeDueyPackageCommit(DueyDto.TakeDueyPackageCommit) returns(google.protobuf.Empty);
}